Update to `fp 2.0.0` and switch references to `studio.fiberplane.com`

--- a/action.yml
+++ b/action.yml
@@ -22,7 +22,7 @@ inputs:
   fp-base-url:
     description: Base URL of the Fiberplane API
     required: true
-    default: https://fiberplane.com
+    default: https://studio.fiberplane.com
 outputs:
   id:
     description: ID of the newly created event
